corrected variables to align with BEM standards / added padding to heart icon to prevent cutoff of due to enlongated text

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -33,7 +33,7 @@
   background-color: transparent;
   opacity: 40%;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 23px;
 }
 
 .card__like-button:hover {
