--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,7 +12,7 @@
   padding: 0 10px;
 }
 
-.modal__opened {
+.modal_opened {
   visibility: visible;
 }
 
